fix section link word wrap

--- a/src/home/index.scss
+++ b/src/home/index.scss
@@ -190,6 +190,7 @@
             display: flex;
             align-items: center;
             margin-right: 50px;
+            white-space: nowrap;
             height: 32px;
             color: #3D75E3;
             cursor: pointer;
